--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles.xaml"/>
+                <ResourceDictionary Source="Icons.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
         
