--- a/WpfApp1/NotifHistory.xaml
+++ b/WpfApp1/NotifHistory.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1" xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
-        Title="NotifHistory" Height="400" Width="300" Background="#1c2026" WindowStyle="None" ResizeMode="CanResize">
+        Title="NotifHistory" Height="400" Width="300" 
+        MinHeight="400" MinWidth="300" Background="#1c2026" 
+        WindowStyle="None" ResizeMode="CanResize" WindowStartupLocation="Manual">
 
     <WindowChrome.WindowChrome>
         <WindowChrome ResizeBorderThickness="4" CaptionHeight="0"/>
@@ -48,12 +50,13 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border x:Name="ClearButtonBorder" Padding="5, 3, 5, 3" Background="#2F3542" CornerRadius="2" Cursor="Hand">
-                            <Label Content="Clear" Foreground="White" FontSize="16" FontWeight="DemiBold"/>
+                        <Border x:Name="ClearButtonBorder" Background="#FF2C9C55" CornerRadius="2" Cursor="Hand" Height="32" Width="32">
+                            <!--<Label Content="Clear" Foreground="White" FontSize="16" FontWeight="DemiBold"/>-->
+                            <Image x:Name="ClearImg" Source="/ClearIcon.png" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="ClearButtonBorder" Property="Border.Background" Value="#3c4354"/>
+                                <Setter TargetName="ClearButtonBorder" Property="Border.Background" Value="#167a31"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -64,27 +67,27 @@
 
     <Grid UseLayoutRounding="True">
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Background="#22272d">
+        <Grid Grid.Row="0" Background="#FF2C9C55">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" Content="Notifications" Foreground="White" FontSize="16" FontWeight="DemiBold" Padding="5,0,0,0" MouseDown="Drag" MouseDoubleClick="AddNotif"/>
+            <Label Grid.Column="0" Content="Notifications" Foreground="White" FontSize="26" FontWeight="DemiBold" Padding="5,0,0,0" VerticalContentAlignment="Center" MouseDown="Drag"/>
 
             <StackPanel Grid.Column="1" Background="Transparent" MouseDown="Drag">
-                <fa:ImageAwesome Icon="Bell" Foreground="White" Height="13" Margin="5, 6, 0, 0" HorizontalAlignment="Left"/>
+                <fa:ImageAwesome Icon="Bell" Foreground="White" Height="20" Margin="8, 12, 0, 0" HorizontalAlignment="Left"/>
             </StackPanel>
 
             <Button Style="{StaticResource ExitButton}"
                     Grid.Column="2"
                     Click="Exit">
-                <fa:ImageAwesome Icon="Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede"/>
+                <fa:ImageAwesome Icon="Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede" Margin="5"/>
             </Button>
         </Grid>
 
@@ -97,7 +100,7 @@
         <Label Grid.Row="1" x:Name="ZeroNotifsLabel"
                VerticalAlignment="Stretch" VerticalContentAlignment="Center" 
                HorizontalContentAlignment="Center" Foreground="#afafaf"
-               FontSize="16" FontWeight="DemiBold">
+               FontSize="16" FontWeight="DemiBold" FontFamily="Consolas">
 
             <TextBlock Text="We seem to be all out of notifications :o" Padding="40, 0, 40, 0" TextWrapping="WrapWithOverflow" TextAlignment="Center"/>
         </Label>
@@ -105,7 +108,7 @@
                 Style="{StaticResource ClearButton}" Grid.Row="1" 
                 HorizontalAlignment="Right" VerticalAlignment="Bottom" 
                 Padding="8, 5, 8, 5" Margin="0, 0, 10, 10"
-                Click="Clear">
+                Click="Clear" ToolTip="Clear all">
             <Button.Effect>
                 <DropShadowEffect Opacity="0.5"/>
             </Button.Effect>
