--- a/WpfApp1/Styles.xaml
+++ b/WpfApp1/Styles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:WpfApp1">
+                    xmlns:local="clr-namespace:WpfApp1"
+                    xmlns:fa="http://schemas.fontawesome.io/icons/">
 
 
 
@@ -76,6 +77,11 @@
                     <Border x:Name="button" Background="#2b2d3b" BorderThickness="0">
                         <ContentPresenter x:Name="content" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" TargetName="button" Value="#3c3e4f"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -101,15 +107,16 @@
 
     <Style x:Key="SettingsButton" TargetType="{x:Type Button}">
         <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border x:Name="SettingsButtonBorder" BorderThickness="0" Padding="5" Cursor="Hand">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" TargetName="SettingsButtonBorder" Value="#FF534F4F"/>
+                            <Setter Property="Background" TargetName="SettingsButtonBorder" Value="#46c76a"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -181,7 +188,7 @@
                 </Track.IncreaseRepeatButton>
             </Track>
         </Grid>
-    </ControlTemplate>    
+    </ControlTemplate>
 
     <Style x:Key="SettingsSlider" TargetType="Slider">
         <Setter Property="Focusable" Value="False"/>
@@ -196,32 +203,18 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="SaveButton" TargetType="{x:Type Button}">
+    <Style x:Key="SettingButton" TargetType="{x:Type Button}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-
-                    <Border x:Name="button"  Cursor="Hand" BorderThickness="0" Padding="10, 5, 10, 5" CornerRadius="5">
+                    <Border x:Name="button" Cursor="Hand" BorderThickness="0" Padding="10, 5, 10, 5" CornerRadius="5" Background="#FF2C9C55">
                         <ContentPresenter x:Name="content" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        <Border.Background>
-                            <LinearGradientBrush EndPoint="1, 0.5" StartPoint="0, 0.5">
-                                <GradientStop Color="#4ab567" Offset="0"/>
-                                <GradientStop Color="#FF21833C" Offset="1"/>
-                            </LinearGradientBrush>
-                        </Border.Background>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
-                            <Setter TargetName="button" Property="Border.Background">
-                                <Setter.Value>
-                                    <LinearGradientBrush EndPoint="1, 0.5" StartPoint="0, 0.5">
-                                        <GradientStop Color="#FF30974C" Offset="0"/>
-                                        <GradientStop Color="#FF0F5F25" Offset="1"/>
-                                    </LinearGradientBrush>
-                                </Setter.Value>
-                            </Setter>
+                            <Setter TargetName="button" Property="Background" Value="#FF0F5F25"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value="0.5"/>
@@ -329,6 +322,63 @@
                 <Setter Property="Template" Value="{StaticResource Slider2}"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+
+    <Style x:Key="Button" TargetType="{x:Type Button}">
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="ClearButtonBorder" Padding="5, 3, 5, 3" Background="#2F3542" CornerRadius="2" Cursor="Hand">
+                        <ContentPresenter/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ClearButtonBorder" Property="Border.Background" Value="#3c4354"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="AuthButton" TargetType="{x:Type Button}">
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="ClearButtonBorder" Padding="14, 10, 14, 10" Background="#FF39AC63"  Cursor="Hand" >
+                        <ContentPresenter HorizontalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ClearButtonBorder" Property="Border.Background" Value="#FF28934F"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="BackButton" TargetType="{x:Type Button}">
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="BackButtonBorder" Padding="8" Background="#FF39AC63" CornerRadius="5" Cursor="Hand">
+                        <ContentControl Width="30" Height="30">
+                            <fa:ImageAwesome x:Name="Icon" Icon="ChevronLeft" Foreground="White"/>
+                        </ContentControl>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="BackButtonBorder" Property="Background" Value="#FF28934F"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
