--- a/WpfApp1/ColorPalette.xaml
+++ b/WpfApp1/ColorPalette.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="WpfApp1.ColorPalette"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:local="clr-namespace:WpfApp1" xmlns:fa="http://schemas.fontawesome.io/icons/"
+        xmlns:fa5="http://schemas.fontawesome.com/icons/"
         Title="ColorPalette" Width="400" Height="300" BorderThickness="0" BorderBrush="#22272d" Background="#1c2026" WindowStyle="None" ResizeMode="NoResize">
     <Window.Resources>
         <Color x:Key="CurrentColor" A="255" R="0" G="255" B="0"></Color>
@@ -58,26 +55,26 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
 
         <Grid Grid.Row="0" HorizontalAlignment="Stretch" Background="#22272d">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="30"/>
-                </Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="30"/>
+            </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0" Content="Color Picker" Foreground="White" FontSize="16" FontWeight="DemiBold"  Padding="5,0,0,0" VerticalContentAlignment="Center" MouseDown="StackPanel_MouseDown"/>
-                <StackPanel Grid.Column="1" Background="Transparent" HorizontalAlignment="Stretch" Orientation="Horizontal" MouseDown="StackPanel_MouseDown"/>
-                <Button Grid.Column="2" Style="{StaticResource ExitButton}" Width="30" Height="20" HorizontalAlignment="Right" Click="Button_Click">
-                    <fa:ImageAwesome Icon="Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede"/>
-                </Button>
-            </Grid>
+            <StackPanel Grid.Column="1" Background="Transparent" HorizontalAlignment="Stretch" Orientation="Horizontal" MouseDown="StackPanel_MouseDown"/>
+            <Button Grid.Column="2" Style="{StaticResource ExitButton}" Width="30" Height="30" Click="Button_Click">
+                <fa5:SvgAwesome Icon="Solid_Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede"/>
+            </Button>
+        </Grid>
 
-            <Grid x:Name="ColorGrid" Grid.Row="1" Margin="0,5,0,0">
+        <Grid x:Name="ColorGrid" Grid.Row="1" Margin="0,5,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
