--- a/WpfApp1/Settings.xaml
+++ b/WpfApp1/Settings.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1" xmlns:fa="http://schemas.fontawesome.io/icons/"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:fa5="http://schemas.fontawesome.com/icons/"
         mc:Ignorable="d"
         Title="Settings" WindowStyle="None" ResizeMode="NoResize" 
         Height="300" Width="400" WindowStartupLocation="Manual">
@@ -19,7 +19,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Background="#FF2C9C55">
+        <Grid Grid.Row="0" Background="#FF131721">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="40"/>
@@ -31,13 +31,13 @@
                         Background="Transparent"
                         Orientation="Horizontal">
                 <Label Content="Settings" Foreground="White" FontSize="26" FontWeight="DemiBold" Padding="5,0,0,0" VerticalContentAlignment="Center"/>
-                <fa:ImageAwesome Height="20" Icon="Cog" Foreground="White" Margin="5, 2, 0, 0"/>
+                <fa5:SvgAwesome  Icon="Solid_Cogs" Height="30" Foreground="White" Margin="5, 0, 0, 0"/>
             </StackPanel>
 
             <Button Style="{StaticResource ExitButton}"
                     Grid.Column="1"
                     Click="Exit">
-                <fa:ImageAwesome Icon="Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede" Margin="5"/>
+                <fa5:SvgAwesome Icon="Solid_Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede" Margin="5"/>
             </Button>
         </Grid>
 
