--- a/WpfApp1/Styles.xaml
+++ b/WpfApp1/Styles.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:WpfApp1"
-                    xmlns:fa="http://schemas.fontawesome.io/icons/">
+                    xmlns:fa5="http://schemas.fontawesome.com/icons/">
 
 
 
@@ -17,7 +16,7 @@
                     <Border
                         x:Name="border"
                         Background="#1d2129"
-                        BorderThickness="1"
+                        BorderThickness="1 1 0 1"
                         SnapsToDevicePixels="True">
                     </Border>
 
@@ -44,11 +43,9 @@
 
             <!--// Border with a background //-->
 
-            <Border
-                    Grid.Row="1"
+            <Border Grid.Row="1"
                     Margin="0"
-                    Background="#13161c">
-            </Border>
+                    Background="#13161c"/>
 
             <!--// Track - Contaioner for the element that indicates the position of the scrollbar //-->
 
@@ -92,7 +89,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="ExitButtonBorder" BorderThickness="0" Padding="5" Cursor="Hand">
+                    <Border x:Name="ExitButtonBorder" BorderThickness="0" Padding="5" Background="Transparent" Cursor="Hand">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -111,12 +108,12 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="SettingsButtonBorder" BorderThickness="0" Padding="5" Cursor="Hand">
+                    <Border x:Name="SettingsButtonBorder" BorderThickness="0" Padding="5" Background="Transparent" Cursor="Hand">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" TargetName="SettingsButtonBorder" Value="#46c76a"/>
+                            <Setter Property="Background" TargetName="SettingsButtonBorder" Value="#99BDB8B8"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -366,9 +363,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="BackButtonBorder" Padding="8" Background="#FF39AC63" CornerRadius="5" Cursor="Hand">
-                        <ContentControl Width="30" Height="30">
-                            <fa:ImageAwesome x:Name="Icon" Icon="ChevronLeft" Foreground="White"/>
+                    <Border x:Name="BackButtonBorder" Padding="4" Background="#FF39AC63" CornerRadius="5" Cursor="Hand">
+                        <ContentControl Width="40" Height="40">
+                            <fa5:SvgAwesome x:Name="Icon" Icon="Solid_CaretLeft" Foreground="White"/>
                         </ContentControl>
                     </Border>
                     <ControlTemplate.Triggers>
